update portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -8,6 +8,46 @@
     <title>Portfolio</title>
 </head>
 <body>
+    <div class="header">
+        <div class="wrap">
+            <div id="title-area" class="clearfix">
+                <h1 id="title">Huan Yang</h1>
+            </div>
+        <nav class="clearfix">
+            <ul>
+                <li><a href="index.html" id="nav-start">About</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="contact.html" id="nav-end">Contact</a></li>
+            </ul>                
+        </nav> 
+    </div>
+    </div>
+    <div class="entire-content"> 
+        <div class="wrap" id="main-content">    
+            <div class="subtitle-area">
+                <h1 class="subtitle">Portfolio</h1>
+            </div>
+            <div class="clearfix">
+                <div class="clearfix">
+                    <div class="container">
+                        <img src="assets/images/spring.jpg" alt="spring" class="gallery-image" id="spring-image">
+                        <div class="text-on-image">Spring</div> 
+                    </div>   
+                    <img src="assets/images/summer.jpg" alt="summer" class="gallery-image" id="summer-image">
+                    
+                </div> 
+                <div class="clearfix"> 
+                    <img src="assets/images/autumn1.jpg" alt="autumn1" class="gallery-image" id="autumn1-image">
+                    <img src="assets/images/autumn2.jpg" alt="autumn2" class="gallery-image" id="autumn2-image">
+                </div>
+                <img src="assets/images/winter.jpg" alt="winter" class="gallery-image" id="winter-image">
+            </div>
+
+        </div>
+    </div>
+            
    
 </body>
+<footer>
+</footer>
 </html>
