--- a/portfolio.html
+++ b/portfolio.html
@@ -30,17 +30,38 @@
             <div class="clearfix">
                 <div class="clearfix">
                     <div class="container">
-                        <img src="assets/images/spring.jpg" alt="spring" class="gallery-image" id="spring-image">
-                        <div class="text-on-image">Spring</div> 
-                    </div>   
-                    <img src="assets/images/summer.jpg" alt="summer" class="gallery-image" id="summer-image">
-                    
+                        <img src="assets/images/spring.jpg" alt="spring" class="gallery-image">
+                        <div class="text-block">
+                            <h2>Spring</h2>
+                        </div> 
+                    </div>
+                    <div class="container">
+                        <img src="assets/images/summer.jpg" alt="summer" class="gallery-image">
+                        <div class="text-block">
+                            <h2>Summer</h2>
+                        </div> 
+                    </div>
                 </div> 
-                <div class="clearfix"> 
-                    <img src="assets/images/autumn1.jpg" alt="autumn1" class="gallery-image" id="autumn1-image">
-                    <img src="assets/images/autumn2.jpg" alt="autumn2" class="gallery-image" id="autumn2-image">
+                <div class="clearfix">
+                    <div class="container">
+                        <img src="assets/images/autumn1.jpg" alt="autumn1" class="gallery-image">
+                        <div class="text-block">
+                            <h2>Autumn1</h2>
+                        </div> 
+                    </div>
+                    <div class="container">
+                        <img src="assets/images/autumn2.jpg" alt="autumn2" class="gallery-image">
+                        <div class="text-block">
+                            <h2>Autumn2</h2>
+                        </div> 
+                    </div>
                 </div>
-                <img src="assets/images/winter.jpg" alt="winter" class="gallery-image" id="winter-image">
+                <div class="container">
+                    <img src="assets/images/winter.jpg" alt="winter" class="gallery-image">
+                    <div class="text-block">
+                        <h2>Winter</h2>
+                    </div> 
+                </div>
             </div>
 
         </div>
