--- a/contact.html
+++ b/contact.html
@@ -1,46 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
     <title>Contact</title>
-</head>
-<body>
-    <div class="header">
+  </head>
+  <body>
+    <div class="wrapper">
+      <div class="header">
         <div class="wrap">
-            <div id="title-area" class="clearfix">
-                <h1 id="title">Huan Yang</h1>
-            </div>
-        <nav class="clearfix">
+          <div id="title-area" class="clearfix">
+            <h1 id="title">Huan Yang</h1>
+          </div>
+          <nav class="clearfix">
             <ul>
-                <li><a href="index.html" id="nav-start">About</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="contact.html" id="nav-end">Contact</a></li>
-            </ul>                
-        </nav> 
+              <li><a href="index.html" id="nav-start">About</a></li>
+              <li><a href="portfolio.html">Portfolio</a></li>
+              <li><a href="contact.html" id="nav-end">Contact</a></li>
+            </ul>
+          </nav>
         </div>
-    </div>
+      </div>
 
-    <div class="entire-content"> 
+      <div class="entire-content">
         <div class="wrap" id="main-content">
-            <div class="subtitle-area">
-                <h1 class="subtitle">Contact</h1>
-            </div>
-            <form action="/action_page.php">
-                <p class="label">Name</p>
-                <input type="text" class="inputform" name="name" placeholder=""><br>
-                <p class="label">Email</p>
-                <input type="text" class="inputform" name="email" placeholder=""><br>
-                <p class="label">Message</p>
-                <input type="text" class="inputform" id="message" placeholder=""><br>
-                <input type="submit" class="submit" value="Submit">
-            </form>
-                   
+          <div class="subtitle-area">
+            <h1 class="subtitle">Contact</h1>
+          </div>
+          <form action="/action_page.php">
+            <p class="label">Name</p>
+            <input
+              type="text"
+              class="inputform"
+              name="name"
+              placeholder=""
+            /><br />
+            <p class="label">Email</p>
+            <input
+              type="text"
+              class="inputform"
+              name="email"
+              placeholder=""
+            /><br />
+            <p class="label">Message</p>
+            <input
+              type="text"
+              class="inputform"
+              id="message"
+              placeholder=""
+            /><br />
+            <input type="submit" class="submit" value="Submit" />
+          </form>
         </div>
+      </div>
+      <div class="push"></div>
     </div>
-</body>
-<footer>
-</footer>
+  </body>
+  <footer class="footer"></footer>
 </html>
