--- a/portfolio.html
+++ b/portfolio.html
@@ -1,74 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
     <title>Portfolio</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="header">
-        <div class="wrap">
-            <div id="title-area" class="clearfix">
-                <h1 id="title">Huan Yang</h1>
-            </div>
-        <nav class="clearfix">
-            <ul>
-                <li><a href="index.html" id="nav-start">About</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="contact.html" id="nav-end">Contact</a></li>
-            </ul>                
-        </nav> 
-    </div>
-    </div>
-    <div class="entire-content"> 
-        <div class="wrap" id="main-content">    
-            <div class="subtitle-area">
-                <h1 class="subtitle">Portfolio</h1>
-            </div>
-            <div class="clearfix">
-                <div class="clearfix">
-                    <div class="container">
-                        <img src="assets/images/spring.jpg" alt="spring" class="gallery-image">
-                        <div class="text-block">
-                            <h2>Spring</h2>
-                        </div> 
-                    </div>
-                    <div class="container">
-                        <img src="assets/images/summer.jpg" alt="summer" class="gallery-image">
-                        <div class="text-block">
-                            <h2>Summer</h2>
-                        </div> 
-                    </div>
-                </div> 
-                <div class="clearfix">
-                    <div class="container">
-                        <img src="assets/images/autumn1.jpg" alt="autumn1" class="gallery-image">
-                        <div class="text-block">
-                            <h2>Autumn1</h2>
-                        </div> 
-                    </div>
-                    <div class="container">
-                        <img src="assets/images/autumn2.jpg" alt="autumn2" class="gallery-image">
-                        <div class="text-block">
-                            <h2>Autumn2</h2>
-                        </div> 
-                    </div>
-                </div>
-                <div class="container">
-                    <img src="assets/images/winter.jpg" alt="winter" class="gallery-image">
-                    <div class="text-block">
-                        <h2>Winter</h2>
-                    </div> 
-                </div>
-            </div>
-
+      <div class="wrap">
+        <div id="title-area" class="clearfix">
+          <h1 id="title">Huan Yang</h1>
         </div>
+        <nav class="clearfix">
+          <ul>
+            <li><a href="index.html" id="nav-start">About</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="contact.html" id="nav-end">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
     </div>
-            
-   
-</body>
-<footer>
-</footer>
+    <div class="entire-content">
+      <div class="wrap" id="main-content">
+        <div class="subtitle-area">
+          <h1 class="subtitle">Portfolio</h1>
+        </div>
+        <div class="clearfix">
+          <div class="clearfix">
+            <div class="container">
+              <img
+                src="assets/images/spring.jpg"
+                alt="spring"
+                class="gallery-image"
+              />
+              <div class="text-block">
+                <h2>Spring</h2>
+              </div>
+            </div>
+            <div class="container">
+              <img
+                src="assets/images/summer.jpg"
+                alt="summer"
+                class="gallery-image"
+              />
+              <div class="text-block">
+                <h2>Summer</h2>
+              </div>
+            </div>
+          </div>
+          <div class="clearfix">
+            <div class="container">
+              <img
+                src="assets/images/autumn1.jpg"
+                alt="autumn1"
+                class="gallery-image"
+              />
+              <div class="text-block">
+                <h2>Autumn1</h2>
+              </div>
+            </div>
+            <div class="container">
+              <img
+                src="assets/images/autumn2.jpg"
+                alt="autumn2"
+                class="gallery-image"
+              />
+              <div class="text-block">
+                <h2>Autumn2</h2>
+              </div>
+            </div>
+          </div>
+          <div class="container">
+            <img
+              src="assets/images/winter.jpg"
+              alt="winter"
+              class="gallery-image"
+            />
+            <div class="text-block">
+              <h2>Winter</h2>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="push"></div>
+    </div>
+  </body>
+  <footer class="footer"></footer>
 </html>
