initial files and first try to apply bootstrap

--- a/index.html
+++ b/index.html
@@ -4,63 +4,81 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" type="text/css" href="assets/css/normalize.css" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <!-- <link rel="stylesheet" type="text/css" href="assets/css/normalize.css" /> -->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
     <title>Main-Bio</title>
   </head>
   <body>
     <div class="header">
-      <div class="wrap">
-        <div id="title-area" class="clearfix">
-          <h1 id="title">Huan Yang</h1>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-4">
+            <h1 id="title">Huan Yang</h1>
+          </div>
+          <div class="col-8">
+            <ul class="nav justify-content-end">
+              <li class="nav-item">
+                <a class="nav-link active" href="index.html">About me</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="portfolio.html">Portfolio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contact.html">Contact</a>
+              </li>
+            </ul>
+          </div>
         </div>
-        <nav class="clearfix">
-          <ul>
-            <li><a href="index.html" id="nav-start">About</a></li>
-            <li><a href="portfolio.html">Portfolio</a></li>
-            <li><a href="contact.html" id="nav-end">Contact</a></li>
-          </ul>
-        </nav>
       </div>
     </div>
     <div class="entire-content">
-      <div class="wrap" id="main-content">
-        <div class="subtitle-area">
-          <h1 class="subtitle">About Me</h1>
+      <div class="container-fluid content-area">
+        <div class="row subtitle-area">
+          <div class="col-4">
+            <h1 class="subtitle">About Me</h1>
+          </div>
         </div>
-        <img
-          id="profile-image"
-          class="clearfix"
-          src="assets/images/profile-image.JPG"
-          alt="profile-image"
-          height="160"
-          ,
-          with="120"
-        />
-        <p>
-          Lorem Ipsum is simply dummy text of the printing and typesetting
-          industry. Lorem Ipsum has been the industry's standard dummy text ever
-          since the 1500s, when an unknown printer took a galley of type and
-          scrambled it to make a type specimen book. It has survived not only
-          five centuries, but also the leap into electronic typesetting,
-          remaining essentially unchanged. It was popularised in the 1960s with
-          the release of Letraset sheets containing Lorem Ipsum passages, and
-          more recently with desktop publishing software like Aldus PageMaker
-          including versions of Lorem Ipsum.
-        </p>
-        <p>
-          It is a long established fact that a reader will be distracted by the
-          readable content of a page when looking at its layout. The point of
-          using Lorem Ipsum is that it has a more-or-less normal distribution of
-          letters, as opposed to using 'Content here, content here', making it
-          look like readable English. Many desktop publishing packages and web
-          page editors now use Lorem Ipsum as their default model text, and a
-          search for 'lorem ipsum' will uncover many web sites still in their
-          infancy. Various versions have evolved over the years, sometimes by
-          accident, sometimes on purpose (injected humour and the like).
-        </p>
+        <div class="row">
+          <div class="col-12">
+            <img
+              src="assets/images/profile-image.JPG"
+              alt="responsive-profile-image"
+              class="float-left img-fluid"
+              id="profile-image"
+            />
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum has been the industry's standard dummy text
+              ever since the 1500s, when an unknown printer took a galley of
+              type and scrambled it to make a type specimen book. It has
+              survived not only five centuries, but also the leap into
+              electronic typesetting, remaining essentially unchanged. It was
+              popularised in the 1960s with the release of Letraset sheets
+              containing Lorem Ipsum passages, and more recently with desktop
+              publishing software like Aldus PageMaker including versions of
+              Lorem Ipsum.
+            </p>
+            <p>
+              It is a long established fact that a reader will be distracted by
+              the readable content of a page when looking at its layout. The
+              point of using Lorem Ipsum is that it has a more-or-less normal
+              distribution of letters, as opposed to using 'Content here,
+              content here', making it look like readable English. Many desktop
+              publishing packages and web page editors now use Lorem Ipsum as
+              their default model text, and a search for 'lorem ipsum' will
+              uncover many web sites still in their infancy. Various versions
+              have evolved over the years, sometimes by accident, sometimes on
+              purpose (injected humour and the like).
+            </p>
+          </div>
+        </div>
       </div>
-      <div class="push"></div>
     </div>
   </body>
   <footer class="footer"></footer>
