--- a/contact.html
+++ b/contact.html
@@ -4,77 +4,58 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-      crossorigin="anonymous"
-    />
     <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
     <title>Contact</title>
   </head>
   <body>
-    <div class="header">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-4">
+    <div class="wrapper">
+      <div class="header">
+        <div class="wrap">
+          <div id="title-area" class="clearfix">
             <h1 id="title">Huan Yang</h1>
           </div>
-          <div class="col-8">
-            <ul class="nav justify-content-end">
-              <li class="nav-item">
-                <a class="nav-link active" href="index.html">About me</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="portfolio.html">Portfolio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
-              </li>
+          <nav class="clearfix">
+            <ul>
+              <li><a href="index.html" id="nav-start">About</a></li>
+              <li><a href="portfolio.html">Portfolio</a></li>
+              <li><a href="contact.html" id="nav-end">Contact</a></li>
             </ul>
-          </div>
+          </nav>
         </div>
       </div>
-    </div>
-    <div class="entire-content">
-      <div class="container-fluid content-area">
-        <div class="row subtitle-area">
-          <div class="col-4">
+
+      <div class="entire-content">
+        <div class="wrap" id="main-content">
+          <div class="subtitle-area">
             <h1 class="subtitle">Contact</h1>
           </div>
-        </div>
-        <div class="col-12">
-          <form>
-            <div class="form-group">
-              <label for="exampleInputName1">Name</label>
-              <input
-                type="text"
-                class="form-control"
-                id="exampleInputName1"
-                placeholder="John Smith"
-              />
-            </div>
-            <div class="form-group">
-              <label for="exampleInputEmail1">Email</label>
-              <input
-                type="email"
-                class="form-control"
-                id="exampleInputEmail1"
-                placeholder="example@gmail.com"
-              />
-            </div>
-            <div class="form-group">
-              <label for="exampleInputMessage1">Message</label>
-              <textarea
-                class="form-control"
-                id="exampleFormControlTextarea1"
-                rows="8"
-              ></textarea>
-            </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+          <form action="/action_page.php">
+            <p class="label">Name</p>
+            <input
+              type="text"
+              class="inputform"
+              name="name"
+              placeholder=""
+            /><br />
+            <p class="label">Email</p>
+            <input
+              type="text"
+              class="inputform"
+              name="email"
+              placeholder=""
+            /><br />
+            <p class="label">Message</p>
+            <input
+              type="text"
+              class="inputform"
+              id="message"
+              placeholder=""
+            /><br />
+            <input type="submit" class="submit" value="Submit" />
           </form>
         </div>
       </div>
+      <div class="push"></div>
     </div>
   </body>
   <footer class="footer"></footer>
