add id to picturs on portfolio page and add responsive changes to large viewport

--- a/portfolio.html
+++ b/portfolio.html
@@ -34,6 +34,7 @@
                 src="assets/images/spring.jpg"
                 alt="spring"
                 class="gallery-image"
+                id="spring"
               />
               <div class="text-block">
                 <h2>Spring</h2>
@@ -44,6 +45,7 @@
                 src="assets/images/summer.jpg"
                 alt="summer"
                 class="gallery-image"
+                id="summer"
               />
               <div class="text-block">
                 <h2>Summer</h2>
@@ -56,6 +58,7 @@
                 src="assets/images/autumn1.jpg"
                 alt="autumn1"
                 class="gallery-image"
+                id="autumn1"
               />
               <div class="text-block">
                 <h2>Autumn1</h2>
@@ -66,6 +69,7 @@
                 src="assets/images/autumn2.jpg"
                 alt="autumn2"
                 class="gallery-image"
+                id="autumn2"
               />
               <div class="text-block">
                 <h2>Autumn2</h2>
@@ -77,6 +81,7 @@
               src="assets/images/winter.jpg"
               alt="winter"
               class="gallery-image"
+              id="winter"
             />
             <div class="text-block">
               <h2>Winter</h2>
