add responsive feature to images in portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
         </div>
         <div class="clearfix">
           <div class="clearfix">
-            <div class="container">
+            <div class="container-left">
               <img
                 src="assets/images/spring.jpg"
                 alt="spring"
@@ -40,7 +40,7 @@
                 <h2>Spring</h2>
               </div>
             </div>
-            <div class="container">
+            <div class="container-right">
               <img
                 src="assets/images/summer.jpg"
                 alt="summer"
@@ -53,7 +53,7 @@
             </div>
           </div>
           <div class="clearfix">
-            <div class="container">
+            <div class="container-left">
               <img
                 src="assets/images/autumn1.jpg"
                 alt="autumn1"
@@ -64,7 +64,7 @@
                 <h2>Autumn1</h2>
               </div>
             </div>
-            <div class="container">
+            <div class="container-right">
               <img
                 src="assets/images/autumn2.jpg"
                 alt="autumn2"
@@ -76,7 +76,7 @@
               </div>
             </div>
           </div>
-          <div class="container">
+          <div class="container-left">
             <img
               src="assets/images/winter.jpg"
               alt="winter"
