add image and link to word guess game to Portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -30,14 +30,15 @@
         <div class="clearfix">
           <div class="clearfix">
             <div class="container-left">
-              <img
-                src="assets/images/spring.jpg"
-                alt="spring"
-                class="gallery-image"
-                id="spring"
-              />
+              <a href="https://huanyang51.github.io/Word-Guess-Game/"
+                ><img
+                  src="assets/images/marvel_portfolio_P_crop.jpg"
+                  alt="marvel word guess game"
+                  class="gallery-image"
+                  id="marvel"
+              /></a>
               <div class="text-block">
-                <h2>Spring</h2>
+                <h2>Marvel word guess game</h2>
               </div>
             </div>
             <div class="container-right">
