fix the alignment of newtext and image in Portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,9 @@
                   id="marvel"
               /></a>
               <div class="text-block">
-                <h2>Marvel word guess game</h2>
+                <a href="https://huanyang51.github.io/Word-Guess-Game/"
+                  ><h2>Marvel word guess game</h2></a
+                >
               </div>
             </div>
             <div class="container-right">
