add link to Crysctal Collector Game to Portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -44,14 +44,17 @@
               </div>
             </div>
             <div class="container-right">
-              <img
-                src="assets/images/summer.jpg"
-                alt="summer"
-                class="gallery-image"
-                id="summer"
-              />
+              <a href="https://huanyang51.github.io/unit-4-game/"
+                ><img
+                  src="assets/images/gem_portfolio.jpg"
+                  alt="crystal collector"
+                  class="gallery-image"
+                  id="gem"
+              /></a>
               <div class="text-block">
-                <h2>Summer</h2>
+                <a href="https://huanyang51.github.io/unit-4-game/"
+                  ><h2>Crystal Collector Game</h2></a
+                >
               </div>
             </div>
           </div>
