fix the position of crystal collector game image

--- a/portfolio.html
+++ b/portfolio.html
@@ -44,7 +44,9 @@
               </div>
             </div>
             <div class="container-right">
-              <a href="https://huanyang51.github.io/unit-4-game/"
+              <a
+                class="right-link"
+                href="https://huanyang51.github.io/unit-4-game/"
                 ><img
                   src="assets/images/gem_portfolio.jpg"
                   alt="crystal collector"
