--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
               /></a>
               <div class="text-block">
                 <a href="https://huanyang51.github.io/Word-Guess-Game/"
-                  ><h2>Marvel word guess game</h2></a
+                  ><h2>Marvel Word Guess Game</h2></a
                 >
               </div>
             </div>
@@ -62,14 +62,17 @@
           </div>
           <div class="clearfix">
             <div class="container-left">
-              <img
-                src="assets/images/autumn1.jpg"
-                alt="autumn1"
-                class="gallery-image"
-                id="autumn1"
-              />
+              <a href="https://huanyang51.github.io/trivia-game/">
+                <img
+                  src="assets/images/hp_portfolio.jpg"
+                  alt="Harry Potter Trivia"
+                  class="gallery-image"
+                  id="trivia"
+              /></a>
               <div class="text-block">
-                <h2>Autumn1</h2>
+                <a href="https://huanyang51.github.io/trivia-game/">
+                  <h2>Harry Potter Trivia</h2></a
+                >
               </div>
             </div>
             <div class="container-right">
