update: update portfolio with mdl template

--- a/publication.html
+++ b/publication.html
@@ -60,14 +60,12 @@
           <nav
             class="mdl-navigation mdl-typography--body-1-force-preferred-font"
           >
-            <a class="mdl-navigation__link is-active" href="index.html"
-              >About</a
-            >
+            <a class="mdl-navigation__link" href="index.html">About</a>
             <a class="mdl-navigation__link" href="portfolio.html"
               >Coding Portfolio</a
             >
-            <a class="mdl-navigation__link" href="publication.html"
-              >Research publication</a
+            <a class="mdl-navigation__link  is-active" href="publication.html"
+              >Research Publication</a
             >
             <a class="mdl-navigation__link" href="contact.html">Contact</a>
           </nav>
@@ -87,53 +85,36 @@
       </div>
       <main class="mdl-layout__content">
         <div class="mdl-grid portfolio-max-width">
-          <div class="mdl-cell mdl-cell--12-col mdl-card mdl-shadow--4dp">
-            <div class="mdl-card__title">
-              <h2 class="mdl-card__title-text">About Me</h2>
-            </div>
-            <div class="mdl-card__media">
+          <div
+            class="mdl-grid mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-card mdl-shadow--4dp"
+          >
+            <div class="mdl-card__media mdl-cell mdl-cell--12-col-tablet">
               <img
                 class="article-image"
-                src=" images/about_header.jpg"
+                src=" images/publication01.jpg"
                 border="0"
                 alt=""
               />
             </div>
-
-            <div class="mdl-grid portfolio-copy">
-              <h3 class="mdl-cell mdl-cell--12-col mdl-typography--headline">
-                A Biology Researcher
-              </h3>
-              <div
-                class="mdl-cell mdl-cell--12-col mdl-card__supporting-text no-padding "
-              >
-                <p>
-                  I'm working on an ant species, <i>Harpegnathos Saltator</i>.
-                  It fascinates me that the workers in the colony have the
-                  ability to become reproductive to maintain the dynamic of the
-                  colony after the queen dies. Very few ant species have this
-                  caste plasticity and worker to pseudo-queen transition. We
-                  work on the gene profile change during this transition. We
-                  also study the behavior and development of the orco mutant
-                  ants we generated .
-                </p>
+            <div class="mdl-cell mdl-cell--8-col">
+              <h2 class="mdl-card__title-text">
+                An Engineered orco Mutation Produces Aberrant Social Behavior
+                and Defective Neural Development in Ants
+              </h2>
+              <div class="mdl-card__supporting-text padding-top">
+                <span
+                  >Yan, H., Opachaloemphan, C., Mancini, G., Yang, H., Gallitto,
+                  M., Mlejnek, J., Haight, K., Ghaninia, M., Huo, L., Leibholz,
+                  A., et al. (2017)</span
+                >
               </div>
-
-              <h3 class="mdl-cell mdl-cell--12-col mdl-typography--headline">
-                A Learning Web Developer
-              </h3>
-
-              <div
-                class="mdl-cell mdl-cell--12-col mdl-card__supporting-text no-padding "
-              >
-                <p>
-                  I'm currently learning to code in Columbia Coding Bootcamp
-                  part-time. I've already learned HTML, CSS, JavaScript, node.js
-                  as well as databases like MySQL and MongoDB. This program not
-                  only teaches me coding but has also changed my way of thinking
-                  and learning. This extraordinary learning experience will be a
-                  great help when it comes to a field like Bioinformatics.
-                </p>
+              <div class="mdl-card__supporting-text no-left-padding">
+                <span
+                  >Catalog:
+                  <a href="https://www.cell.com/fulltext/S0092-8674(17)30770-5"
+                    >Cell volume 170, issue 4, 736–747</a
+                  ></span
+                >
               </div>
             </div>
           </div>
