--- a/portfolio.html
+++ b/portfolio.html
@@ -1,107 +1,241 @@
 <!DOCTYPE html>
+<!--
+  Material Design Lite
+  Copyright 2015 Google Inc. All rights reserved.
+
+  Licensed under the Apache License, Version 2.0 (the "License");
+  you may not use this file except in compliance with the License.
+  You may obtain a copy of the License at
+
+      https://www.apache.org/licenses/LICENSE-2.0
+
+  Unless required by applicable law or agreed to in writing, software
+  distributed under the License is distributed on an "AS IS" BASIS,
+  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  See the License for the specific language governing permissions and
+  limitations under the License
+-->
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
-    <title>Portfolio</title>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="description"
+      content="A portfolio template that uses Material Design Lite."
+    />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, minimum-scale=1.0"
+    />
+    <title>Huan Yang Portfolio</title>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en"
+    />
+    <link
+      rel="stylesheet"
+      href="https://code.getmdl.io/1.3.0/material.grey-pink.min.css"
+    />
+    <link rel="stylesheet" href="styles.css" />
+
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
   </head>
+
   <body>
-    <div class="header">
-      <div class="wrap">
-        <div id="title-area" class="clearfix">
-          <h1 id="title">Huan Yang</h1>
+    <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+      <header
+        class="mdl-layout__header mdl-layout__header--waterfall portfolio-header"
+      >
+        <div class="mdl-layout__header-row portfolio-logo-row">
+          <span class="mdl-layout__title">
+            <div class="portfolio-logo"></div>
+            <span class="mdl-layout__title"><b>Huan Yang</b></span>
+          </span>
         </div>
-        <nav class="clearfix">
-          <ul>
-            <li><a href="index.html" id="nav-start">About</a></li>
-            <li><a href="portfolio.html">Portfolio</a></li>
-            <li><a href="contact.html" id="nav-end">Contact</a></li>
-          </ul>
+        <div
+          class="mdl-layout__header-row portfolio-navigation-row mdl-layout--large-screen-only"
+        >
+          <nav
+            class="mdl-navigation mdl-typography--body-1-force-preferred-font"
+          >
+            <a class="mdl-navigation__link" href="index.html">About</a>
+            <a class="mdl-navigation__link is-active" href="portfolio.html"
+              >Coding Portfolio</a
+            >
+            <a class="mdl-navigation__link" href="publication.html"
+              >Research publication</a
+            >
+            <a class="mdl-navigation__link" href="contact.html">Contact</a>
+          </nav>
+        </div>
+      </header>
+      <div class="mdl-layout__drawer mdl-layout--small-screen-only">
+        <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
+          <a class="mdl-navigation__link" href="index.html">About</a>
+          <a class="mdl-navigation__link is-active" href="portfolio.html"
+            >Coding Portfolio</a
+          >
+          <a class="mdl-navigation__link" href="publication.html"
+            >Research publication</a
+          >
+          <a class="mdl-navigation__link" href="contact.html">Contact</a>
         </nav>
       </div>
-    </div>
-    <div class="entire-content">
-      <div class="wrap" id="main-content">
-        <div class="subtitle-area">
-          <h1 class="subtitle">Portfolio</h1>
-        </div>
-        <div class="clearfix">
-          <div class="clearfix">
-            <div class="container-left">
-              <a href="https://huanyang51.github.io/Word-Guess-Game/"
-                ><img
-                  src="assets/images/marvel_portfolio_P_r.jpg"
-                  alt="marvel word guess game"
-                  class="gallery-image"
-                  id="marvel"
-              /></a>
-              <div class="text-block">
-                <a href="https://huanyang51.github.io/Word-Guess-Game/"
-                  ><h2>Marvel Word Guess Game</h2></a
-                >
-              </div>
-            </div>
-            <div class="container-right">
-              <a
-                class="right-link"
-                href="https://huanyang51.github.io/unit-4-game/"
-                ><img
-                  src="assets/images/gem_portfolio.jpg"
-                  alt="crystal collector"
-                  class="gallery-image"
-                  id="gem"
-              /></a>
-              <div class="text-block">
-                <a href="https://huanyang51.github.io/unit-4-game/"
-                  ><h2>Crystal Collector Game</h2></a
-                >
-              </div>
-            </div>
-          </div>
-          <div class="clearfix">
-            <div class="container-left">
-              <a href="https://huanyang51.github.io/trivia-game/">
-                <img
-                  src="assets/images/hp_portfolio.jpg"
-                  alt="Harry Potter Trivia"
-                  class="gallery-image"
-                  id="trivia"
-              /></a>
-              <div class="text-block">
-                <a href="https://huanyang51.github.io/trivia-game/">
-                  <h2>Harry Potter Trivia</h2></a
-                >
-              </div>
-            </div>
-            <div class="container-right">
+      <main class="mdl-layout__content">
+        <div class="mdl-grid portfolio-max-width">
+          <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
+            <div class="mdl-card__media">
               <img
-                src="assets/images/autumn2.jpg"
-                alt="autumn2"
-                class="gallery-image"
-                id="autumn2"
+                class="article-image"
+                src=" images/gym.jpg"
+                border="0"
+                alt=""
               />
-              <div class="text-block">
-                <h2>Autumn2</h2>
-              </div>
+            </div>
+            <div class="mdl-card__title">
+              <h2 class="mdl-card__title-text">Pound Droppers</h2>
+            </div>
+            <div class="mdl-card__supporting-text">
+              A website designed for a gym. Find your trainer through a survey
+              within no time.
+            </div>
+            <div class="mdl-card__actions mdl-card--border">
+              <a
+                class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent"
+                href="https://pound-droppers.herokuapp.com"
+                >Try it here</a
+              >
             </div>
           </div>
-          <div class="container-left">
-            <img
-              src="assets/images/winter.jpg"
-              alt="winter"
-              class="gallery-image"
-              id="winter"
-            />
-            <div class="text-block">
-              <h2>Winter</h2>
+          <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
+            <div class="mdl-card__media">
+              <img
+                class="article-image"
+                src=" images/burger_img.jpg"
+                border="0"
+                alt=""
+              />
+            </div>
+            <div class="mdl-card__title">
+              <h2 class="mdl-card__title-text">Burgers!</h2>
+            </div>
+            <div class="mdl-card__supporting-text">
+              Add your favourite burgers and devour it!
+            </div>
+            <div class="mdl-card__actions mdl-card--border">
+              <a
+                class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent"
+                href="https://eat-a-burger2020.herokuapp.com/"
+                >Try it here</a
+              >
+            </div>
+          </div>
+          <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
+            <div class="mdl-card__media">
+              <img
+                class="article-image"
+                src=" images/icooking.jpg"
+                border="0"
+                alt=""
+              />
+            </div>
+            <div class="mdl-card__title">
+              <h2 class="mdl-card__title-text">iCooking</h2>
+            </div>
+            <div class="mdl-card__supporting-text">
+              Choose the cuisine you would like to cook, iCooking will recommand
+              receipes!
+            </div>
+            <div class="mdl-card__actions mdl-card--border">
+              <a
+                class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent"
+                href="https://moon-mnny.github.io/project-one/"
+                >Try it here</a
+              >
+            </div>
+          </div>
+          <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
+            <div class="mdl-card__media">
+              <img
+                class="article-image"
+                src=" images/hp_portfolio.jpg"
+                border="0"
+                alt=""
+              />
+            </div>
+            <div class="mdl-card__title">
+              <h2 class="mdl-card__title-text">Harry Potter Trivia</h2>
+            </div>
+            <div class="mdl-card__supporting-text">
+              Let's see how much you know about Harry Potter!
+            </div>
+            <div class="mdl-card__actions mdl-card--border">
+              <a
+                class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent"
+                href="https://huanyang51.github.io/trivia-game/"
+                >Try it here</a
+              >
+            </div>
+          </div>
+          <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
+            <div class="mdl-card__media">
+              <img
+                class="article-image"
+                src=" images/gems.jpg"
+                border="0"
+                alt=""
+              />
+            </div>
+            <div class="mdl-card__title">
+              <h2 class="mdl-card__title-text">Crystal Collector Game</h2>
+            </div>
+            <div class="mdl-card__supporting-text">
+              Calculate the crystals you collected to match a certain number.
+            </div>
+            <div class="mdl-card__actions mdl-card--border">
+              <a
+                class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent"
+                href="https://huanyang51.github.io/unit-4-game/"
+                >Try it here</a
+              >
+            </div>
+          </div>
+          <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
+            <div class="mdl-card__media">
+              <img
+                class="article-image"
+                src=" images/marvel_portfolio.jpg"
+                border="0"
+                alt=""
+              />
+            </div>
+            <div class="mdl-card__title">
+              <h2 class="mdl-card__title-text">Marvel Word Guess Game</h2>
+            </div>
+            <div class="mdl-card__supporting-text">
+              A Marvel themed word guess game.
+            </div>
+            <div class="mdl-card__actions mdl-card--border">
+              <a
+                class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent"
+                href="https://huanyang51.github.io/Word-Guess-Game/"
+                >Try it here</a
+              >
             </div>
           </div>
         </div>
-      </div>
-      <div class="push"></div>
+        <footer class="mdl-mega-footer">
+          <div class="mdl-mega-footer">
+            <ul class="mdl-mega-footer__link-list">
+              <li><a href="https://github.com/huanyang51">MY GITHUB</a></li>
+            </ul>
+          </div>
+        </footer>
+      </main>
     </div>
+    <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
   </body>
-  <footer class="footer"></footer>
 </html>
