fix: correct the name of image for iCooking

--- a/portfolio.html
+++ b/portfolio.html
@@ -137,7 +137,7 @@
             <div class="mdl-card__media">
               <img
                 class="article-image"
-                src=" images/icooking.jpg"
+                src=" images/iCooking.jpg"
                 border="0"
                 alt=""
               />
