--- a/portfolio.html
+++ b/portfolio.html
@@ -66,7 +66,7 @@
               >Coding Portfolio</a
             >
             <a class="mdl-navigation__link" href="publication.html"
-              >Research publication</a
+              >Research Publication</a
             >
             <a class="mdl-navigation__link" href="contact.html">Contact</a>
           </nav>
@@ -227,11 +227,24 @@
             </div>
           </div>
         </div>
-        <footer class="mdl-mega-footer">
-          <div class="mdl-mega-footer">
-            <ul class="mdl-mega-footer__link-list">
-              <li><a href="https://github.com/huanyang51">MY GITHUB</a></li>
+        <footer class="mdl-mini-footer">
+          <div class="mdl-mini-footer__left-section">
+            <ul class="mdl-mini-footer__link-list">
+              <li>
+                <i class="material-icons">
+                  link
+                </i>
+              </li>
+              <li><a href="https://github.com/huanyang51"></a>GITHUB</a></li>
+              <li>
+                <a href="https://www.linkedin.com/in/huan-yang-82139839/"
+                  >LINKEDIN</a
+                >
+              </li>
             </ul>
+          </div>
+          <div class="mdl-mini-footer__right-section">
+            © 2020 Huan Yang using Material Design Lite template
           </div>
         </footer>
       </main>
